Finish ListaTelefonica in Exercises

--- a/Exercises/Files/ListaTelefonica/src/interfaz/JFInterfaz.form
+++ b/Exercises/Files/ListaTelefonica/src/interfaz/JFInterfaz.form
@@ -13,11 +13,17 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Importar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiImportarActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jmiExportar">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Exportar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiExportarActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
